kotlin-ide/idea/testData/diagnosticMessage/js/jsCodeErrorText3.txt
<!-- jsCodeErrorText3 -->
JavaScript: syntax error in code:
for (var i =
            ^
    )
^^^^^